Adicionando regras de Conversores e Validadores

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,7 +10,8 @@
             <h:inputText value="#{controlador.pessoa.nome}"/>
             <!-- action um retorno em String -> caminho para redirecionar -->
             <h:commandButton value="exibir" action="#{controlador.redirecionar()}"/>
-            <h:commandButton value="listar" action="list"/>
+            <h:commandButton value="criar" action="pessoa/edit"/>
+            <h:commandButton value="listar" action="pessoa/list"/>
         </h:form>
     </h:body>
     
