--- a/src/main/webapp/pessoa/edit.xhtml
+++ b/src/main/webapp/pessoa/edit.xhtml
@@ -1,25 +1,29 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h1>Listagem de Pessoas!</h1>
+        <h2> -- Cadastro de Pessoas -- </h2>
         <h:form>
-            <h:inputText value="#{controlador.pessoa.nome}"/>
-            <h:commandButton value="adicionar" action="#{controlador.adicionar()}"/>
-        </h:form>
 
-        <h:dataTable var="p" value="#{controlador.todasAsPessoas()}">
-            <h:column>
-                #{p.id}
-            </h:column>
-            <h:column>
-                #{p.nome}
-            </h:column>
-        </h:dataTable>
+<!--            <h:messages layout="list"/>-->
+            <h:outputLabel for="nome" value="Nome" />
+            <h:inputText value="#{controlador.pessoa.nome}" id="nome"/>
+            <h:outputLabel for="cpf" value="CPF" />
+            <h:inputText value="#{controlador.pessoa.cpf}" converter="cpf.converter" validator="cpf.validator" id="cpf"/>
+            <h:message for="cpf" />
+
+            <h:selectOneMenu value="#{controlador.pessoa.dependente}">
+                <f:selectItems value="#{controlador.pessoa.dependentes()}" var="dep" itemLabel="#{dep.nome}" />
+            </h:selectOneMenu>
+
+            <h:commandButton value="adicionar" action="#{controlador.adicionar()}"/>
+            <h:commandLink value="lista" action="list" immediate="true"/>
+        </h:form>
     </h:body>
 
 </html>
