--- a/src/main/webapp/pessoa/list.xhtml
+++ b/src/main/webapp/pessoa/list.xhtml
@@ -1,25 +1,31 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
         <h1>Listagem de Pessoas!</h1>
         <h:form>
-            <h:inputText value="#{controlador.pessoa.nome}"/>
-            <h:commandButton value="adicionar" action="#{controlador.adicionar()}"/>
-        </h:form>
+            <h:commandLink value="nova" action="edit" />
+            <h:dataTable var="p" value="#{controlador.todasAsPessoas()}">
+                <h:column>
+                    <f:facet name="header">Id</f:facet>
+                    #{p.id}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Nome</f:facet>
+                    #{p.nome}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">CPF</f:facet>
 
-        <h:dataTable var="p" value="#{controlador.todasAsPessoas()}">
-            <h:column>
-                #{p.id}
-            </h:column>
-            <h:column>
-                #{p.nome}
-            </h:column>
-        </h:dataTable>
+                                        #{p.cpf.formatado()}
+                </h:column>
+            </h:dataTable>
+        </h:form>
     </h:body>
 
 </html>
