Adicionando a funcionalidade de cadastro de Dependentes

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,6 +12,7 @@
             <h:commandButton value="exibir" action="#{controlador.redirecionar()}"/>
             <h:commandButton value="criar" action="pessoa/edit"/>
             <h:commandButton value="listar" action="pessoa/list"/>
+            <h:commandButton value="HTML 5" action="exemplo-html5"/>
         </h:form>
     </h:body>
     
