--- a/src/main/webapp/pessoa/edit.xhtml
+++ b/src/main/webapp/pessoa/edit.xhtml
@@ -1,40 +1,37 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        <h2> -- Cadastro de Pessoas -- </h2>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                template="../template.xhtml">
+    <ui:define name="centro">
+        <h2 class="header center orange-text">  Cadastro de Pessoas </h2>
         <h:form>
             <h:messages layout="list"/>
             <h:outputLabel for="nome" value="Nome" />
-            <h:inputText value="#{controlador.pessoa.nome}" 
+            <h:inputText value="#{controlador.pessoa.nome}"
                          id="nome"/>
             <h:outputLabel for="cpf" value="CPF" />
-            <h:inputText value="#{controlador.pessoa.cpf}" 
-                         converter="converter.cpf" 
-                         validator="validator.cpf" 
+            <h:inputText value="#{controlador.pessoa.cpf}"
+                         converter="converter.cpf"
+                         validator="validator.cpf"
                          id="cpf"/>
             <h:message for="cpf" />
 
-            <h:selectOneMenu value="#{controlador.pessoa.dependente}" 
+            <h:selectOneMenu value="#{controlador.pessoa.dependente}"
                              converter="converter.Dependente"
                              validator="validator.Dependente"
-                             id="dep">"
+                             id="dep" styleClass="orange-text">
                 <f:selectItems value="#{controlador.todosOsDependentes()}"
                                var="dep" itemLabel="#{dep.nome}" />
             </h:selectOneMenu>
 
+            <h:commandButton id="comando" styleClass="btn" value="adicionar" action="#{controlador.adicionar()}"/>
 
-
-
-            <h:commandButton value="adicionar" action="#{controlador.adicionar()}"/>
-            <h:commandLink value="lista" action="list" immediate="true"/>
+            <h:commandLink id="comando-link" value="lista" action="list" immediate="true"/>
         </h:form>
-    </h:body>
-
-</html>
+    </ui:define>
+</ui:composition>
 
